--- a/apps/mantine.dev/src/components/Shell/Shell.module.css
+++ b/apps/mantine.dev/src/components/Shell/Shell.module.css
@@ -3,5 +3,6 @@
 }
 
 .content {
-  flex: 1;
+  flex: 0 0 calc(100% - var(--docs-navbar-width) - var(--docs-table-of-contents-width));
+  max-width: calc(100% - var(--docs-navbar-width) - var(--docs-table-of-contents-width));
 }
